tests/e2e/semantics/list_nested.error
Error: syntax error in story at line 4, column 5

4|    d = c + 1
          ^

E0103: `list[list[list[int]]]` is not compatible with `int`
