tests/e2e/semantics/list_nested.story
a = [1, 2]
b = [a, a]
c = [b, b]
d = c + 1
